--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cli-color": "^2.0.0",
     "node-fetch": "^2.6.0",
     "open": "^7.0.0",
+    "tmp": "^0.1.0",
     "yargs": "^14.2.0"
   }
 }
