mozilla_vpn -> mozillavpn

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mozilla_vpn",
+  "name": "mozillavpn",
   "version": "0.0.1",
   "description": "Just a funny experiment",
   "main": "src/main.js",
@@ -9,7 +9,7 @@
   "author": "Andrea Marchesini <baku@mozilla.com>",
   "license": "Mozilla",
   "bin": {
-    "mozilla_vpn": "./src/main.js"
+    "mozillavpn": "./src/main.js"
   },
   "dependencies": {
     "cli-color": "^2.0.0",
